--- a/.github/workflows/deployment-notify.yml
+++ b/.github/workflows/deployment-notify.yml
@@ -1,23 +1,25 @@
-name: Deployment Notification to Discord
+name: Vercel 배포 알림을 Discord로 전송
 
 on:
   deployment_status:
 
 jobs:
   notify-discord:
-    name: Notify Discord on Deployment Status
+    name: 배포 상태를 Discord로 알림
     runs-on: ubuntu-latest
     if: github.event.deployment_status.state == 'success' || github.event.deployment_status.state == 'failure'
 
     steps:
-      - name: Notify Discord
+      - name: Discord로 알림 전송
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
           STATUS="${{ github.event.deployment_status.state }}"
           ENVIRONMENT="${{ github.event.deployment.environment }}"
           URL="${{ github.event.deployment_status.target_url }}"
+          TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S")
           EMBED_COLOR=$([ "$STATUS" == "success" ] && echo "3066993" || echo "15158332")
+          TITLE=$([ "$STATUS" == "success" ] && echo "✅ 배포 성공" || echo "❌ 배포 실패")
           curl -H "Content-Type: application/json" \
-               -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"Deployment $STATUS\", \"description\": \"**Environment**: $ENVIRONMENT\n**URL**: [Click Here]($URL)\", \"color\": $EMBED_COLOR}]}" \
+               -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"$TITLE\", \"description\": \"**환경**: $ENVIRONMENT\n**URL**: [여기를 클릭하세요]($URL)\n**시간**: $TIMESTAMP\", \"color\": $EMBED_COLOR}]}" \
                $DISCORD_WEBHOOK_URL
