--- a/.github/workflows/deployment-notify.yml
+++ b/.github/workflows/deployment-notify.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Discord로 알림 전송
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          COMMIT_MESSAGE: ${{ steps.get-commit-message.outputs.COMMIT_MESSAGE }}
         run: |
           STATUS="${{ github.event.deployment_status.state }}"
           ENVIRONMENT="${{ github.event.deployment.environment }}"
@@ -30,7 +31,6 @@ jobs:
           EMBED_COLOR=$([ "$STATUS" == "success" ] && echo "3066993" || echo "15158332")
           TITLE=$([ "$STATUS" == "success" ] && echo "✅ 배포 성공" || echo "❌ 배포 실패")
           THUMBNAIL_URL="https://assets.vercel.com/image/upload/front/vercel/twitter-card.png"
-          COMMIT_MESSAGE="${{ env.COMMIT_MESSAGE }}"
           curl -H "Content-Type: application/json" \
                -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"$TITLE\", \"description\": \"**환경**: $ENVIRONMENT\n**URL**: [여기를 클릭하세요]($URL)\n**배포자**: $ACTOR\n**배포 시간**: $TIMESTAMP\n**커밋 메시지**: $COMMIT_MESSAGE\", \"color\": $EMBED_COLOR, \"thumbnail\": {\"url\": \"$THUMBNAIL_URL\"}}]}" \
                $DISCORD_WEBHOOK_URL
