--- a/.github/workflows/deployment-notify.yml
+++ b/.github/workflows/deployment-notify.yml
@@ -10,19 +10,17 @@ jobs:
     if: github.event.deployment_status.state == 'success' || github.event.deployment_status.state == 'failure'
 
     steps:
-      - name: 커밋 요약 가져오기
-        id: get-commit-summary
+      - name: 배포 이름 가져오기
+        id: get-deployment-name
         run: |
-          COMMIT_SHA="${{ github.event.deployment_status.sha }}"
-          COMMIT_SUMMARY=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/commits/$COMMIT_SHA" | jq -r .commit.message)
-          echo "COMMIT_SUMMARY=$COMMIT_SUMMARY" >> $GITHUB_ENV
-          echo "::set-output name=COMMIT_SUMMARY::$COMMIT_SUMMARY"
+          DEPLOYMENT_NAME="${{ github.event.deployment.description }}"
+          echo "DEPLOYMENT_NAME=$DEPLOYMENT_NAME" >> $GITHUB_ENV
+          echo "::set-output name=DEPLOYMENT_NAME::$DEPLOYMENT_NAME"
 
       - name: Discord로 알림 전송
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          COMMIT_SUMMARY: ${{ steps.get-commit-summary.outputs.COMMIT_SUMMARY }}
+          DEPLOYMENT_NAME: ${{ steps.get-deployment-name.outputs.DEPLOYMENT_NAME }}
         run: |
           STATUS="${{ github.event.deployment_status.state }}"
           ENVIRONMENT="${{ github.event.deployment.environment }}"
@@ -33,5 +31,5 @@ jobs:
           TITLE=$([ "$STATUS" == "success" ] && echo "✅ 배포 성공" || echo "❌ 배포 실패")
           THUMBNAIL_URL="https://assets.vercel.com/image/upload/q_auto/front/favicon/vercel/apple-touch-icon-256x256.png"
           curl -H "Content-Type: application/json" \
-               -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"$TITLE\", \"description\": \"**환경**: $ENVIRONMENT\n**URL**: [여기를 클릭하세요]($URL)\n**배포자**: $ACTOR\n**배포 시간**: $TIMESTAMP\n**커밋 요약**: $COMMIT_SUMMARY\", \"color\": $EMBED_COLOR, \"thumbnail\": {\"url\": \"$THUMBNAIL_URL\"}}]}" \
+               -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"$TITLE\", \"description\": \"**환경**: $ENVIRONMENT\n**URL**: [여기를 클릭하세요]($URL)\n**배포자**: $ACTOR\n**배포 시간**: $TIMESTAMP\n**배포 이름**: $DEPLOYMENT_NAME\", \"color\": $EMBED_COLOR, \"thumbnail\": {\"url\": \"$THUMBNAIL_URL\"}}]}" \
                $DISCORD_WEBHOOK_URL
