--- a/.github/workflows/deployment-notify.yml
+++ b/.github/workflows/deployment-notify.yml
@@ -33,4 +33,6 @@ jobs:
           TITLE=$([ "$STATUS" == "success" ] && echo "✅ 배포 성공" || echo "❌ 배포 실패")
           THUMBNAIL_URL="https://assets.vercel.com/image/upload/q_auto/front/favicon/vercel/apple-touch-icon-256x256.png"
           DEPLOYMENT_NAME="${{ env.COMMIT_MESSAGE }}"
-          curl -H "Content-Type: application/json"
+          curl -H "Content-Type: application/json" \
+               -d "{\"content\": \"$MESSAGE\", \"embeds\": [{\"title\": \"$TITLE\", \"description\": \"**환경**: $ENVIRONMENT\n**URL**: [여기를 클릭하세요]($URL)\n**배포자**: $ACTOR\n**배포 시간**: $TIMESTAMP\n**커밋 메시지**: $DEPLOYMENT_NAME\", \"color\": $EMBED_COLOR, \"thumbnail\": {\"url\": \"$THUMBNAIL_URL\"}}]}" \
+               $DISCORD_WEBHOOK_URL
